# cam_mobile_pc

./: .gitignore  CLAUDE.md  README.md
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/campc/: CameraStreamer.kt  CameraStreamingService.kt  MainActivity.kt  TcpServer.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  themes.xml
linux/: Cargo.toml  campc.py  launch.sh  setup.sh  setup_ubuntu.sh  start.sh
linux/campc-rust/: Cargo.toml
linux/campc-rust/src/: adb.rs  config.rs  engine.rs  ffmpeg.rs  main.rs  v4l2.rs
linux/src/: config.rs  discovery.rs  engine.rs  ffmpeg.rs  main.rs  v4l2.rs
mobile_cam_app/: settings.gradle.kts
mobile_cam_app/app/: build.gradle.kts
mobile_cam_app/app/src/main/: AndroidManifest.xml
mobile_cam_app/app/src/main/java/com/mobilecamapp/: CameraStreamer.kt  CameraStreamingService.kt  MainActivity.kt  TcpServer.kt
mobile_cam_app/app/src/main/res/layout/: activity_main.xml
mobile_cam_app/app/src/main/res/values/: strings.xml  themes.xml
mobile_cam_app/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
windows/: Cargo.toml  Readme.md
windows/src/: adb.rs  config.rs  discovery.rs  engine.rs  ffmpeg.rs  main.rs  pixel_fmt.rs  virtual_cam.rs
windows/src/ffmpeg/: filter.rs  mod.rs  process.rs  reader.rs
windows/src/mf/: activate.rs  camera.rs  constants.rs  factory.rs  mod.rs  source.rs  stream.rs  types.rs
windows/src/ui/: theme.rs  widgets.rs
