[package]
name = "campc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "campc"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
windows = { version = "0.58", features = [
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_System_LibraryLoader",
    "implement",
] }
windows-core = "0.58"
log = "0.4"
simplelog = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
